[gd_scene load_steps=9 format=3 uid="uid://bipd8hps0wq3l"]

[ext_resource type="Script" uid="uid://cfinvuxgjndnx" path="res://scenes/barbarian_soldier/barbarian.gd" id="1_vqnyk"]
[ext_resource type="PackedScene" uid="uid://cwvrqewcp6lq0" path="res://scenes/knight_soldier/hit_box.tscn" id="2_vqnyk"]
[ext_resource type="Texture2D" uid="uid://d242q5iy0pyea" path="res://assets/own/Barbaro.png" id="3_vqnyk"]
[ext_resource type="Script" uid="uid://d3agcnh5m7evw" path="res://scenes/card/unplaceble.gd" id="4_55y1b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6ml20"]
radius = 9.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oyb8r"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_ktyil"]
radius = 69.065186

[sub_resource type="CircleShape2D" id="CircleShape2D_uwxs6"]
radius = 15.033297

[node name="Barbarian" type="CharacterBody2D" groups=["soldier"]]
collision_mask = 12
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 20.0
script = ExtResource("1_vqnyk")
attack_scene = ExtResource("2_vqnyk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6ml20")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_vqnyk")

[node name="UnplacebleArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource("4_55y1b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnplacebleArea"]
shape = SubResource("RectangleShape2D_oyb8r")

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_ktyil")

[node name="MeleeRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeRange"]
shape = SubResource("CircleShape2D_uwxs6")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 3.0
path_postprocessing = 1
avoidance_enabled = true
radius = 30.0

[node name="CheckPath" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AttackFrequency" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="body_entered" from="MeleeRange" to="." method="_on_melee_range_body_entered"]
[connection signal="body_exited" from="MeleeRange" to="." method="_on_melee_range_body_exited"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="timeout" from="CheckPath" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AttackFrequency" to="." method="_on_attack_frequency_timeout"]
